--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="ori.JPG" alt="" class="card-img img-fluid">
+                    <img src="ori.jpg" alt="" class="card-img img-fluid">
                     <div class="card-body text-center">
                         <h3 class="card-title">Everything Original</h3>
                         <p>
